# videodub

./: .dockerignore  .env.example  .gitignore  Dockerfile  INTEGRATION_GUIDE.md  Makefile  README.md  REFACTORING_PROPOSAL.md  config.py  docker-compose.yml  load_and_translate.py  pyproject.toml  requirements.txt  rerun_with_real_tts.py
.claude/commands/: onboard.md  update-onboard.md
docs/: GETTING_STARTED.md  PIPELINE_ARCHITECTURE.md  performance_analysis_phase4.md  testing_strategy.md
docs/adr/: 0001-pipeline-architecture.md  0002-cost-tracking-integration.md  0003-transcript-processor-redesign.md  0004-pipeline-step-evaluation-framework.md  0005-pipeline-step-separation-and-responsibility-alignment.md  0006-speech-timing-model-redesign.md  README.md
docs/architecture/adr_0005_implementation/: README.md  lessons_learned.md  phase_1_data_extraction.md  phase_2_translation_refactoring.md  phase_3_alignment_service.md  phase_4_integration_performance.md  phase_5_legacy_cleanup.md  phase_6_migration.md
evaluation/: .gitignore  README.md
evaluation/datasets/transcript_processing/: fragmented_speech.json  multi_speaker.json  technical_content.json
evaluation/evaluators/: __init__.py  base.py  transcript_evaluator.py
evaluation/scripts/: run_evaluation.py  test_framework.py  test_real_video.py
examples/: basic_usage.py  quick_test.py
old/: audio_translator.py  config.py  example_usage.py  translation_pipeline.py  video_scraper.py
onboarding/: developer_onboarding.json
quick_test_output/gpt-4_1-nano/scraped/voQEteh6Hko/: Civilization BONUS：  Meet Professor Jiang.en.json3  metadata.json
quick_test_output/gpt-4_1-nano/video_voQEteh6Hko/: metadata.json  processing_result.json  translation.json
requirements/: base.txt  dev.txt
scripts/: migrate_existing_data.py
src/videodub/: __init__.py
src/videodub/adapters/: openai_adapter.py
src/videodub/config/: settings.py  validation.py
src/videodub/core/: exceptions.py  interfaces.py  models.py  new_pipeline.py  pipeline.py  speech_estimation.py
src/videodub/services/: alignment.py  audio.py  audio_processor.py  data_extraction.py  optimized_translator.py  scraper.py  storage.py  transcript.py  translator.py  tts.py  video.py
src/videodub/utils/: cost_tracking.py  logging.py
src/youtube_translator/: __init__.py
src/youtube_translator/adapters/: openai_adapter.py
src/youtube_translator/config/: settings.py  validation.py
src/youtube_translator/core/: exceptions.py  interfaces.py  models.py  pipeline.py
src/youtube_translator/services/: storage.py  transcript_processor.py  translator.py  tts.py  video_processor.py  video_scraper.py
src/youtube_translator/utils/: cost_tracking.py  logging.py
tests/: conftest.py
tests/integration/: __init__.py  test_performance_integration.py  test_performance_optimizations.py  test_pipeline_integration.py  test_service_integration.py
tests/unit/: test_alignment_service.py  test_data_extraction.py  test_models.py  test_new_pipeline.py  test_pipeline.py  test_transcript_processing.py  test_translation_service.py
